# wesync_kotlin

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wesync/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: SoundGenerator.cpp  SoundGenerator.h  somecpp.cpp  somecpp.h
app/src/main/java/com/wesync/: BindingUtils.kt  MainActivity.kt  MainViewModel.kt  MetronomeConfig.kt  MetronomeService.kt  SharedViewModel.kt  TickHandlerThread.kt
app/src/main/java/com/wesync/adapter/: DataBoundListAdapter.kt  SessionAdapter.kt
app/src/main/java/com/wesync/connection/: ConnectionManagerService.kt  Endpoint.kt  Endpoints.kt
app/src/main/java/com/wesync/metronome/: MetronomeConfig.kt  MetronomeService.kt  TickHandlerThread.kt
app/src/main/java/com/wesync/ntp/: NTPClientWorker.kt
app/src/main/java/com/wesync/ui/: BindingUtils.kt  ConnectionFragment.kt  MetronomeFragment.kt  UIState.kt
app/src/main/java/com/wesync/ui/connection/: ConnectionFragment.kt  (+2 more)
app/src/main/java/com/wesync/util/: BindingAdapters.kt  BindingUtils.kt  ByteArrayEncoderDecoder.kt  Converter.kt  Converters.kt  ForegroundServiceLauncher.kt  MetronomeConfig.kt  ServiceManager.kt  ServiceSubscriber.kt  Utility.kt
app/src/main/res/layout/: card_view.xml  connection_fragment.xml  main_activity.xml  main_fragment.xml  metronome_fragment.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/wesync/: ExampleUnitTest.kt
(+15 files in other folders)
